# bank_proj

./: .gitignore  Dockerfile  README.md
c/: CMakeLists.txt  app.c  auth.c  list.c  list.h  makefile  menu.c  menu.h  safe.c  safe.h
sh/: admin_shell.sh  empty_shell.sh  firewall.sh  init.sh  make_host.sh  parse.sh
www/: app.py  requirements.txt  utils.py
www/static/styles/: main.css
www/templates/: home.html  login.html
